test/mutation_analysis/s0941_valid_mountain_array/hafis/o3/mutants/44/result.txt
./test/mutation_analysis/s0941_valid_mountain_array/hafis/o3/mutants/44/Solution.java:26: error: unreachable statement
        for (; false; i++) {
                           ^
1 error
